--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <h1><a href="#">TetzKB6</a></h1>
+      <h1><a href="#">SooKB6</a></h1>
 
       <ul id="gnb">
         <li><a href="#">ABOUT</a></li>
@@ -53,8 +53,8 @@
       <video src="./video/video.mp4" autoplay loop muted></video>
       <article class="text">
         <p>
-          City lights shining through the night <br />where every tells a story
-          story waiting to be told
+          City lights shining through the night <br />where everything tells a
+          story story waiting to be told
         </p>
         <ul>
           <li>
